--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,10 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto auto 1fr auto;
+  gap: 4px;
+  min-height: 100vh;
 }
 
 .container div {
@@ -17,6 +23,19 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.menu > ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-self: center;
+}
+
+.menu > ul li {
+    padding: 0 50px;
 }
 
 .menu ul,
@@ -26,6 +45,14 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 50px;
+}
+
+.sidebar div {
+    display: grid;
+    place-content: center;
 }
 
 .sidebar .photo {
@@ -53,8 +80,16 @@
   text-transform: uppercase;
 }
 
+.nav > ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,12 +103,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,9 +120,15 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+ul,
+li {
+    list-style: none;
 }
